manifests/kudapp-red.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kudapp-red
  namespace: kudapp
  labels:
    app: kdared
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
        app: kdared
  template:
    metadata:
      name: kudapp-red
      namespace: kudapp
      labels:
        app: kdared
        app.kubernetes.io/name: kudapp-red
    spec:
      imagePullSecrets:
        - name: registry-credentials
      containers:
        - image: gitlab.test.dwinternal.com:5050/hleinders/kudapp:latest
          name: kudapp-red
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /red/check
              port: http
              scheme: HTTP
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /red/api/home
              port: http
              scheme: HTTP
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              cpu: "128m"
              memory: "64Mi"
            limits:
              cpu: "512m"
              memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: kudapp-red-svc
  namespace: kudapp
  annotations:
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
    traefik.ingress.kubernetes.io/service.sticky.cookie.name: LB_RED_KUBE
spec:
  ports:
  - name: http-alt
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: kudapp-red
    app: kdared
  type: ClusterIP
